--- a/index.html
+++ b/index.html
@@ -217,6 +217,39 @@
             <h2>Projects</h2>
             <!-- project container/ grid -->
             <div class="project-container">
+                <!-- Repo 4 -->
+                <div class="repository-container">
+                  <div class="repository-head">
+                    <a
+                      href="https://github.com/Choudhry-Shaharyar/App-Review-Insights/tree/main"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      App Reviews Analysis 
+                    </a>
+                    <a
+                      href="https://github.com/Choudhry-Shaharyar/App-Review-Insights/tree/main"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      ><img
+                        width="16"
+                        height="16"
+                        src="./asset/svg/external-link.svg"
+                        alt="external-link"
+                    /></a>
+                  </div>
+      
+                  <p class="repository-description">Using Machine Learning techniques to analyze reviews and create feature requests from financial apps
+                  </p>
+                  <div class="repository-language-used-container">
+                    <span class="language-used">Python</span>
+                    <span class="language-used">NLP</span>
+                    <span class="language-used">LDA</span>
+                    <!-- <span class="language-used" >TextBlob</span> -->
+                    <span class="language-used">Topic Modeling</span>
+                  </div>
+              </div>
+              <!-- Repo 4 End -->
                                                        <!-- Repo 4 -->
                                                        <div class="repository-container">
                                                         <div class="repository-head">
